html overflow hidden bug fixed & doc change

--- a/WebContent/css/layout.css
+++ b/WebContent/css/layout.css
@@ -1,9 +1,7 @@
 #container {
 	
 }
-html{
-	overflow: hidden;
-}
+
 /* header start */
 
 #header {
